tests/negative/comptime_local_missing_initializer.ora
contract ComptimeLocalMissingInitializer {
    pub fn run() -> u256 {
        comptime {
            let value: u256;
        }
        return 1;
    }
}
